WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110347
[GTK][AC] Opacity animation doesn't work with clutter backend
https://bugs.webkit.org/show_bug.cgi?id=110347
Summary
[GTK][AC] Opacity animation doesn't work with clutter backend
ChangSeok Oh
Reported
2013-02-20 07:20:53 PST
After animation features enhancing, opacity animation doesn't work now.
Attachments
Patch
(3.44 KB, patch)
2013-02-22 11:52 PST
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
Simple test case
(444 bytes, text/html)
2013-03-11 09:56 PDT
,
Gustavo Noronha (kov)
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
ChangSeok Oh
Comment 1
2013-02-22 11:52:55 PST
Created
attachment 189803
[details]
Patch
ChangSeok Oh
Comment 2
2013-03-06 08:33:32 PST
This patch is also applied to webkit-clutter.
http://cgit.collabora.com/git/webkit-clutter.git/commit/?h=wip/changseok/unreviewed&id=c4f68d0678b79ed3279227de572fd398500ab44a
Gustavo Noronha (kov)
Comment 3
2013-03-11 09:56:33 PDT
Created
attachment 192489
[details]
Simple test case I've tested this patch on WebKit Clutter with the attached page, and it looks like the transition is happening twice - once because of the CSS transition that is defined, and one because when WebCore sets the final result in the layer, the clutter transition is still set on the actor, so it happens again. I'm getting this warning, as well: (MxLauncher:24704): Clutter-CRITICAL **: clutter_timeline_set_progress_mode: assertion `mode < CLUTTER_ANIMATION_LAST' failed
Gustavo Noronha (kov)
Comment 4
2013-03-11 09:56:53 PDT
Comment on
attachment 189803
[details]
Patch r- for the above
ChangSeok Oh
Comment 5
2013-03-12 00:45:17 PDT
(In reply to
comment #3
) Thanks for the review!
> Created an attachment (id=192489) [details] > Simple test case > > I've tested this patch on WebKit Clutter with the attached page, and it looks like the transition is happening twice - once because of the CSS transition that is defined, and one because when WebCore sets the final result in the layer, the clutter transition is still set on the actor, so it happens again.
Yeah, it's a known issue and dealt in
bug110607
. Please see
bug110607
, I applied it to webkit-clutter as well. I'm getting this warning, as well:
> > (MxLauncher:24704): Clutter-CRITICAL **: clutter_timeline_set_progress_mode: assertion `mode < CLUTTER_ANIMATION_LAST' failed
This is because webkit-clutter is using different toClutterAnimationMode in PlatformClutterAnimation.cpp. webkit-clutter's one is a little old so I think we need to replace it with the one of WebKitGTK+. You may want to refer
https://developer.gnome.org/clutter/stable/ClutterAlpha.html#clutter-alpha-register-func
And actually I think we don't need to care about timing functions anymore because clutter starts to supports them for css3 transitions since its version 1.12.
https://developer.gnome.org/clutter/stable/ClutterTimeline.html#ClutterAnimationMode
ChangSeok Oh
Comment 6
2013-03-12 01:14:31 PDT
The replacing patch for webkit-clutter is here.
http://cgit.collabora.com/git/webkit-clutter.git/commit/?h=wip/changseok/unreviewed&id=7a69a2ed4aa739803997496d5823007eba517f2e
Gustavo Noronha (kov)
Comment 7
2013-03-22 07:37:59 PDT
Comment on
attachment 189803
[details]
Patch OK, this makes sense with
bug 110607
WebKit Review Bot
Comment 8
2013-03-22 07:44:42 PDT
Comment on
attachment 189803
[details]
Patch Clearing flags on attachment: 189803 Committed
r146609
: <
http://trac.webkit.org/changeset/146609
>
WebKit Review Bot
Comment 9
2013-03-22 07:44:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug