[GTK][AC] Opacity animation doesn't work with clutter backend https://bugs.webkit.org/show_bug.cgi?id=110347

Patch by ChangSeok Oh <changseok.oh@collabora.com> on 2013-03-22
Reviewed by Gustavo Noronha Silva.

The static casting in ternary operator doesn't change actual inputted argument type.
So I replaced it with if-else statement.

Covered by existing animation tests.

* platform/graphics/clutter/PlatformClutterAnimation.cpp:
(WebCore::PlatformClutterAnimation::addClutterTransitionForProperty):
(WebCore::PlatformClutterAnimation::addClutterKeyframeTransitionForProperty):

Canonical link: https://commits.webkit.org/131387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146609 268f45cc-cd09-0410-ab3c-d52691b4dbfc